Refeita aplicação do zero - funcionalidade dos Aventureiros completa